--- a/style.scss
+++ b/style.scss
@@ -599,6 +599,7 @@ div {
 .shops__category {
   border-radius: 15px;
   background-color: #ffe038;
+  text-decoration: none;
 }
 
 .shops__categories {
@@ -616,6 +617,8 @@ div {
   padding-top: 30px;
   font-weight: 600;
   padding-left: 27px;
+  color: #010101;
+  text-decoration: none;
 }
 
 .shops__category-1 {
@@ -961,12 +964,12 @@ div {
   padding-bottom: 10px;
 }
 
-#contacts__map .ymaps-2-1-78-controls__control {
+#contacts__map .ymaps-2-1-79-controls__control {
   inset: 108px 10px auto auto !important;
 }
 
 
-#contacts__map .ymaps-2-1-78-zoom {
+#contacts__map .ymaps-2-1-79-zoom {
   border-radius: 8px;
   //box-shadow: 0 2px 6px 0 rgba(0 0 0 / 20%);
   width: 40px;
@@ -975,7 +978,7 @@ div {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .2);
 }
 
-#contacts__map .ymaps-2-1-78-controls__control_toolbar {
+#contacts__map .ymaps-2-1-79-controls__control_toolbar {
   position: absolute !important;
   inset: 200px 10px auto auto;
   margin: 0;
@@ -984,9 +987,9 @@ div {
   border-radius: 8px;
 }
 
-#contacts__map .ymaps-2-1-78-zoom__plus,
-#contacts__map .ymaps-2-1-78-zoom__minus,
-#contacts__map .ymaps-2-1-78-float-button {
+#contacts__map .ymaps-2-1-79-zoom__plus,
+#contacts__map .ymaps-2-1-79-zoom__minus,
+#contacts__map .ymaps-2-1-79-float-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -998,25 +1001,25 @@ div {
   box-shadow: none;
 }
 
-#contacts__map .ymaps-2-1-78-zoom__minus {
+#contacts__map .ymaps-2-1-79-zoom__minus {
   border-radius: 0 0 8px 8px;
 }
 
-#contacts__map .ymaps-2-1-78-float-button {
+#contacts__map .ymaps-2-1-79-float-button {
   border-radius: 8px;
 }
 
-#contacts__map .ymaps-2-1-78-zoom__minus .ymaps-2-1-78-zoom__icon {
+#contacts__map .ymaps-2-1-79-zoom__minus .ymaps-2-1-79-zoom__icon {
   position: static;
   background-image: url(./images/icons/minus.svg);
 }
 
-#contacts__map .ymaps-2-1-78-zoom__plus .ymaps-2-1-78-zoom__icon {
+#contacts__map .ymaps-2-1-79-zoom__plus .ymaps-2-1-79-zoom__icon {
   position: static;
   background-image: url(./images/icons/plus.svg);
 }
 
-#contacts__map .ymaps-2-1-78-float-button-icon {
+#contacts__map .ymaps-2-1-79-float-button-icon {
   position: static;
   background-image: url(./images/icons/location.svg);
 }
@@ -1289,6 +1292,10 @@ div {
     transform: scale(0.8);
     margin-left: -329px;
     margin-top: -700px;
+  }
+
+  .contacts__background-kettle {
+    display: none;
   }
 }
 
