--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 div {
@@ -11,6 +12,7 @@ div {
 .app {
   max-width: 1932px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 //.container {
@@ -26,7 +28,7 @@ div {
 .header__container {
   display: flex;
   align-items: center;
-  width: 1200px;
+  width: 1235px;
   padding-left: 20px;
   margin: 0 auto;
 }
@@ -1115,6 +1117,7 @@ div {
 }
 
 .partners__info {
+  position: relative;
   display: flex;
   padding-bottom: 112px;
 }
@@ -1153,6 +1156,20 @@ div {
   font-weight: 500;
   color: #ffe038;
   cursor: pointer;
+  &.disabled {
+    opacity: 0.7;
+    cursor: default;
+  }
+}
+
+.partners__message {
+  position: absolute;
+  top: 90px;
+  color: green;
+}
+
+.partners__message.error {
+  color: red;
 }
 
 .partners__background-green {
@@ -1286,30 +1303,37 @@ div {
 }
 
 
-/*END FOOTER*/
-
-@media(max-width: 1400px) {
-
-  body {
-    height: 100vh;
-  }
-
-  .app {
-    width: 1920px;
+@media (max-width: 1400px) and (min-width: 1101px) {
+  .header, .hero, .advantages, .categories, .shops {
     transform: scale(0.8);
-    margin-left: -329px;
-    margin-top: -700px;
+    margin-left: -60px;
+    margin-top: -32px;
   }
 
-  .contacts__background-kettle {
-    display: none;
+  .hero__boxes {
+    width: 600px;
   }
-}
 
-@media(max-width: 1200px) {
-  .app {
-    transform: scale(0.8);
-    margin-left: -380px;
+  .advantages, .categories {
+    margin-top: -102px;
+  }
+
+  .shops {
+    margin-top: -402px;
+  }
+
+  .contacts {
+    margin-top: -302px;
+
+    &__container {
+      width: 100%;
+      padding: 0 20px;
+    }
+
+    &__map {
+      width: 100%;
+      height: 550px;
+    }
   }
 }
 
@@ -1345,35 +1369,35 @@ div {
       display: none;
     }
 
-    &__burger {
-      position: absolute;
-      right: 0;
-      top: 0;
-      display: block;
-      width: 60px;
-      height: 66px;
-      //padding: 19px 8px 19px 18px;
-      border-radius: 15px 0 0 15px;
-      background: #ffe038;
-
-      span {
-        position: absolute;
-        left: 18px;
-        top: 19px;
-        width: 35px;
-        height: 6px;
-        border-radius: 4px;
-        background: #080807;
-      }
-
-      span:nth-child(2) {
-        top: 30px;
-      }
-
-      span:last-child {
-        top: 41px;
-      }
-    }
+    //&__burger {
+    //  position: absolute;
+    //  right: 0;
+    //  top: 0;
+    //  display: block;
+    //  width: 60px;
+    //  height: 66px;
+    //  //padding: 19px 8px 19px 18px;
+    //  border-radius: 15px 0 0 15px;
+    //  background: #ffe038;
+    //
+    //  span {
+    //    position: absolute;
+    //    left: 18px;
+    //    top: 19px;
+    //    width: 35px;
+    //    height: 6px;
+    //    border-radius: 4px;
+    //    background: #080807;
+    //  }
+    //
+    //  span:nth-child(2) {
+    //    top: 30px;
+    //  }
+    //
+    //  span:last-child {
+    //    top: 41px;
+    //  }
+    //}
 
   }
 
