--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,7 @@ div {
 .header {
   padding-top: 66px;
 }
+
 .header__container {
   display: flex;
   align-items: center;
@@ -86,7 +87,7 @@ div {
   margin-right: 33px;
 }
 
-.header__item:nth-child(3){
+.header__item:nth-child(3) {
   margin-right: 53px;
 }
 
@@ -120,6 +121,7 @@ div {
 .hero {
   position: relative;
   margin-top: 100px;
+
   &__container {
     position: relative;
     display: flex;
@@ -150,7 +152,7 @@ div {
     z-index: 1;
   }
 
-  &__car-image{
+  &__car-image {
     position: absolute;
     left: 39px;
     top: 73px;
@@ -242,6 +244,7 @@ div {
     z-index: 1;
   }
 }
+
 /*END HERO*/
 
 /*ADVANTAGES*/
@@ -291,7 +294,7 @@ div {
   color: #343434;
 }
 
-.advantages__background{
+.advantages__background {
   position: absolute;
   top: 195px;
   left: -364px;
@@ -309,7 +312,7 @@ div {
   background-image: url(./images/advantages/car.png);
 }
 
-.advantages__sweet{
+.advantages__sweet {
   position: absolute;
   top: 369px;
   right: 4px;
@@ -327,6 +330,7 @@ div {
   left: -330px;
   background-image: url(./images/advantages/table.png);
 }
+
 /*END ADVANTAGES*/
 
 /*CATEGORIES*/
@@ -390,6 +394,7 @@ div {
   height: 157px;
   background-image: url(./images/categories/categories-canc.jpg);
 }
+
 .categories__item-2 {
   grid-area: item-2;
   left: 38px;
@@ -450,6 +455,7 @@ div {
   padding-top: 24px;
   padding-right: 20px;
 }
+
 .categories__item-6 {
   grid-area: item-6;
   background-image: url(./images/categories/categories-cosmetic.jpg);
@@ -515,11 +521,11 @@ div {
   margin-bottom: 2px;
 }
 
-.categories__item-9 span:nth-child(2){
+.categories__item-9 span:nth-child(2) {
   padding-left: 74px;
 }
 
-.categories__item-9 span:nth-child(3){
+.categories__item-9 span:nth-child(3) {
   font-size: 47.5px;
 }
 
@@ -552,7 +558,6 @@ div {
   right: -298px;
   background-image: url(./images/categories/cube.png);
 }
-
 
 
 /*END CATEGORIES*/
@@ -626,27 +631,31 @@ div {
 .shops__category-1 {
   grid-area: item-1;
 }
+
 .shops__category-2 {
   grid-area: item-2;
   position: relative;
   left: 9px;
   width: 339px;
 }
+
 .shops__category-3 {
   grid-area: item-3;
   position: relative;
   left: 9px;
   width: 339px;
 }
+
 .shops__category-4 {
   grid-area: item-4;
 }
+
 .shops__category-5 {
   grid-area: item-5;
 }
 
 .sima-mag {
-    margin-bottom: 90px;
+  margin-bottom: 90px;
 
   .shops__category-1 {
     background-image: url(./images/shops/sima-duck.png);
@@ -660,7 +669,7 @@ div {
     padding-left: 32px;
   }
 
-  .shops__category-2 .shops__category-name span  {
+  .shops__category-2 .shops__category-name span {
     display: block;
   }
 
@@ -681,13 +690,13 @@ div {
     background-image: url(./images/shops/creation.png);
   }
 
-  .shops__category-5 .shops__category-name  {
+  .shops__category-5 .shops__category-name {
     padding-left: 8px;
   }
 }
 
 .gala-mag {
-    margin-bottom: 114px;
+  margin-bottom: 114px;
 
   .shops__category-name {
     color: #ffffff
@@ -975,7 +984,7 @@ div {
   border-radius: 8px;
   //box-shadow: 0 2px 6px 0 rgba(0 0 0 / 20%);
   width: 40px;
-  height: 80px  !important;
+  height: 80px !important;
   padding: 0;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .2);
 }
@@ -1014,7 +1023,7 @@ div {
   display: none;
 }
 
-#contacts__map ymaps [class*=zoom__minus]  {
+#contacts__map ymaps [class*=zoom__minus] {
   border-radius: 0 0 8px 8px;
 }
 
@@ -1156,6 +1165,8 @@ div {
   font-weight: 500;
   color: #ffe038;
   cursor: pointer;
+  z-index: 3;
+
   &.disabled {
     opacity: 0.7;
     cursor: default;
@@ -1338,6 +1349,12 @@ div {
 }
 
 @media(max-width: 1100px) {
+  .partners__message {
+    top: 39px;
+    color: green;
+    font-size: 10px;
+  }
+
   .app {
     position: relative;
     max-width: 384px;
@@ -1351,6 +1368,7 @@ div {
 
   .header {
     padding-top: 27px;
+
     &__container {
       width: 100%;
       padding-left: 31px;
@@ -1403,6 +1421,7 @@ div {
 
   .hero {
     margin-top: 51px;
+
     &__container {
       height: 301px;
       width: 100%;
@@ -1657,9 +1676,11 @@ div {
 
   .shops {
     margin-top: 19px;
+
     &__container {
       width: 100%;
     }
+
     &__title {
       display: flex;
       align-items: center;
@@ -1703,6 +1724,7 @@ div {
     .sima-mag {
       position: relative;
       margin-bottom: 32px;
+
       .shops__category-1 {
         width: 156px;
         height: 178px;
@@ -1789,6 +1811,7 @@ div {
     .gala-mag {
       position: relative;
       margin-bottom: 47px;
+
       .shops__item-title {
         padding-left: 133px;
         margin-bottom: 16px;
@@ -2085,7 +2108,6 @@ div {
     }
 
 
-
     &__background-clock, &__background-green, &__background-kettle {
       display: none;
     }
@@ -2093,6 +2115,7 @@ div {
 
   .partners {
     margin-top: 0;
+
     &__container {
       height: 412px;
       width: 100%;
@@ -2158,6 +2181,7 @@ div {
   .footer {
     padding: 0;
     background-color: white;
+
     &__container {
       position: relative;
       flex-wrap: wrap;
@@ -2249,7 +2273,7 @@ div {
     &__sweet {
       position: absolute;
       bottom: 0;
-      right:0;
+      right: 0;
       width: 51px;
       height: 56px;
       background-image: url(./images/advantages/sweet.png);
